<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="phase">ALC 4 Phase 1</string>
    <string name="action_settings">Settings</string>
    <string name="my_profile">My Profile</string>
    <string name="avatar">My Avatar</string>
    <string name="my_name">Ogenrwot Aaron</string>
    <string name="track">Track: Android</string>
    <string name="country">Country: Uganda</string>
    <string name="email">Email: ogenrwotaron@gmail.com</string>
    <string name="phone_number">Phone Number: +256789001983</string>
    <string name="slack_username">Slack Username: @OgenrwotAaron</string>
    <string name="welcome_alc">Welcome to ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="about_me">MY PROFILE</string>
</resources>
