<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    tools:layout_editor_absoluteY="81dp">

    <ImageView
        android:id="@+id/image_profile"
        android:layout_width="187dp"
        android:layout_height="186dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/avatar" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/my_name"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/image_profile"
        app:layout_constraintStart_toStartOf="@+id/image_profile"
        app:layout_constraintTop_toBottomOf="@+id/image_profile" />

    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif"
                android:text="@string/phone_number"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/text_track"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/track"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/text_phone"
                app:layout_constraintStart_toStartOf="@+id/text_phone"
                app:layout_constraintTop_toBottomOf="@+id/text_phone" />

            <TextView
                android:id="@+id/text_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/email"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/text_track"
                app:layout_constraintStart_toStartOf="@+id/text_track"
                app:layout_constraintTop_toBottomOf="@+id/text_track" />

            <TextView
                android:id="@+id/text_country"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/country"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/text_email"
                app:layout_constraintStart_toStartOf="@+id/text_email"
                app:layout_constraintTop_toBottomOf="@+id/text_email" />

            <TextView
                android:id="@+id/text_slack"
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif"
                android:text="@string/slack_username"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="@+id/text_country"
                app:layout_constraintStart_toStartOf="@+id/text_country"
                app:layout_constraintTop_toBottomOf="@+id/text_country" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>



</android.support.constraint.ConstraintLayout>